--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,5 @@
 /*resources/scss/app.scss*/
 @import "~bootstrap/scss/bootstrap";
 body {
-    background-color: yellow;
+    background-color: black;
 }
